# walenty

./: .gitignore  LICENSE  README.md  walenty.cabal
src/NLP/: Walenty.hs
src/NLP/Walenty/: Expand.hs  Parser.hs  Types.hs
