name:               walenty
version:            0.1.0.0
synopsis:           A Walenty parsing library
description:
    A library for parsing the Polish Valence Dictionary (Walenty).
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.10
copyright:          Copyright (c) 2016 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/walenty
build-type:         Simple

library
    default-language:
        Haskell2010
    hs-source-dirs: src
    build-depends:
        base                >= 4.8      && < 5
      , containers          >= 0.5      && < 0.6
      , text                >= 1.1      && < 1.3
      , attoparsec          >= 0.13     && < 0.14
--       , parsec              >= 3.1      && < 3.2
--       , mtl                 >= 2.1      && < 2.3
--       , transformers        >= 0.3      && < 0.5
--       , pipes               >= 4.1      && < 4.2
--       , optparse-applicative    >= 0.12     && < 0.13
--       , split               >= 0.2      && < 0.3

    exposed-modules:
        NLP.Walenty
      , NLP.Walenty.Expand

    ghc-options: -Wall
    -- cpp-options: -DDebugOn


source-repository head
    type: git
    location: https://github.com/kawu/walenty.git
